 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/08/27:
   * Fix hardcoded Mod1, use ModKey() now (Mathias)
     Window.cc
*07/08/20:
   * Fix some focus issues with moving windows between workspaces (Mark)
     FocusControl.cc
*07/08/12:
   * Updated de_* translations, #1767986 ( Thanks Christian Loosli )
*07/08/11:
   * Updated Swedish translation sv_SE ( Henrik )
     sv_SE/Translation.m
*07/08/10:
   * Update Chinese translation zh_CN, thanks yhlfh
     zh_CN/Translation.m
*07/08/09:
   * Fix shaping handling, stage 2, (Simon)
     - rewrite the core of the Shape handling so that it properly 
       merges client and frame shapes. Fixes all sorts of odd shaping
       behaviour, and incidentally xeyes now gets a visible frame 
       (not having the frame was actually a bug).
     Shape.hh/cc FbWinFrame.hh/cc Window.hh/cc
   * Fix shaping handling, stage 1, (Simon)
     - do borders properly with rounded corners
     - propagate client clip mask as well as bounding mask
     Shape.hh/cc Window.cc
*07/08/07:
   * Rotate toolbar background texture along with toolbar, bug #1694959 (Mark)
     Toolbar.cc
*07/08/06:
   * Fix KDE Dockapps on restart (dont unmap), and some minor tweaks (Simon)
     SystemTray.hh/cc
*07/08/05:
   * When saving window info for rememberm use class name AND instance name,
     AND role if present. (Simon)
     - This should fix firefox/thunderbird issues, but note that mplayer
       (nogui) sets the vo driver name as the instance name.
     Remember.cc
   * Fix menu heading encoding (Simon) 
     sf.net bug #1712583: NLS:Non-latin characters displayed incorrectly in menu title
     MenuCreator.cc
   * Fix error passing --with-locale path in ./configure (Simon)
     sf.net bug #1708859
     configure.in
   * Add missing translation strings (Simon)
     - Thanks tenner (de_*)
     - Thanks bobbens (es_ES)
     - Thanks Guillermo Patterer (es_AR)
     - Thanks me (C/en_US/en_GB)
     - Thanks izhirahider (pt_*)
     ?/Translation.m