@@ -412,7 +412,7 @@ void Toolbar::reconfigure() {
 
         m_tools = tools; // copy values
 
-        if (m_tools.size()) {
+        if (!m_tools.empty()) {
             // make lower case
             transform(m_tools.begin(), m_tools.end(),
                       m_tools.begin(),
